fix: spacing and emoji

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ h1, h2, h3, h4, h5, h6, [class^='heading-'] {
 	text-transform: uppercase;
 	font-family: "Barlow Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 	color: #26264b;
+	margin-top: 1rem;
 }
 
 h1 a, h1 a:focus, h1 a:active, h2 a, h2 a:focus, h2 a:active, h3 a, h3 a:focus, h3 a:active, h4 a, h4 a:focus, h4 a:active, h5 a, h5 a:focus, h5 a:active, h6 a, h6 a:focus, h6 a:active, [class^='heading-'] a, [class^='heading-'] a:focus, [class^='heading-'] a:active {
